[package]
name = "arti-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures = "0"
futures-core = "0"
pin-project-lite = "0"
hex = "0"
bytes = "1"
sha1 = "0"
axum = "0.6"
serde = { version = "1", features = ["derive"] }
tokio = { version="1", features=["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.4.0", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tower-layer = "0.3.2"
hyper = { version = "0", features = ["full"] }
hyper-tls = "0"
tracing = "0"
tracing-subscriber = "0"
uuid = { version = "1", features = ["v4"] }
md5 = "0"