[package]
name = "arti-vault"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
rstest = "0"

[dependencies]
anyhow = "1"
async-recursion = "1"
async-trait = "0"
failsafe = "1"
futures = "0"
futures-core = "0"
hex = "0"
pin-project-lite = "0"
bytes = "1"
sha1 = "0"
axum = "0.6"
lazy_static = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0"
tokio = { version="1", features=["full"] }
tokio-util = "0"
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.4.0", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tower-layer = "0.3.2"
hyper = { version = "0", features = ["full"] }
hyper-tls = "0"
tracing = "0"
tracing-subscriber = "0"
uuid = { version = "1", features = ["v4"] }
md5 = "0"

